Grammar and clarity review

--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -48,13 +48,13 @@ This Scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Coop Play Rules}}
 
-In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} that apply to this campaign.
+In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), players must reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} specific to this campaign.
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} Necropolis, Inferno, Dungeon
 
-Refer to the table below the map layout for details regarding Units and AI Decks.
+Refer to the table below the map layout for detailed information about Units and AI Decks.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -82,24 +82,23 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Heroes Placement}}
 
-Place Necropolis, Inferno, and Dugeon Heros in their respective Faction Towns.
+Place Necropolis, Inferno, and Dungeon Heroes in their respective Faction Towns.
 Place Gelu on the center field of the Rampart S4 Starting Map tile.
-Place Mephala or Clancy on an empty Field of the F10 Map Tile.
-Place the Pack of Medusas on the Far Map tile as shown in the Scenario map layout.
+Place either Mephala or Clancy on an empty Field of the F10 Map Tile.
+Place the Pack of Medusas on the Far Map tile as indicated in the Scenario map layout.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Defeat and take all enemy Faction Towns.
+Defeat and capture all enemy Faction Towns.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
 You lose if any of the following occur:
 \begin{itemize}
-  \item Gelu loses a Combat encounter.
-  \item You fail to take Necropolis and Inferno Faction Towns in a single Round.
-  \item You fail to take all Enemy Faction Towns before the end of Round 13.
+  \item Gelu is defeated in a Combat encounter.
+  \item You fail to capture the Necropolis and Inferno Faction Towns in a single Round.
+  \item You fail to capture all Enemy Faction Towns before the end of Round 13.
 \end{itemize}
-
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{1} Round:}
@@ -124,7 +123,7 @@ You lose if any of the following occur:
     Several of your supply trains have been hit by raiders and their contents looted.
     Lose: 3~\svg{gold}, 1~\svg{building_materials}, 1~\svg{valuables}.
     Deal with this situation.
-  \item The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} till the end of the Scenario (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
+  \item The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} until the end of the Scenario (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
 \end{itemize}
 
 \textbf{Entering the Field with Pandora's Box:}
@@ -135,20 +134,20 @@ You lose if any of the following occur:
 
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item If the Necropolis and Inferno Faction Towns have not been taken yet, raiders continue to hit your supply trains.
-    Lose 10 \svg{gold} of this resource rounds income.
+ \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
+   Lose 10 \svg{gold} from this round's income.
 \end{itemize}
 
 \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item If the Necropolis and Inferno Faction Towns have not been taken yet, raiders continue to hit your supply trains.
-    Lose 20 \svg{gold} of this resource rounds income.
+  \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
+    Lose 20 \svg{gold} from this round's income.
 \end{itemize}
 
 \textbf{\nth{13} Round:}
 \begin{itemize}
-  \item If the Necropolis and Inferno Faction Towns have not been taken yet, raiders continue to hit your supply trains.
-    Lose 30 \svg{gold} of this resource rounds income.
+  \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
+    Lose 30 \svg{gold} from this round's income.
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
@@ -165,27 +164,27 @@ During this Scenario:
     \item Gelu cannot surrender.
       Player 2 can surrender.
       If player 2 is defeated in Combat, lose 5 \svg{gold} and both Heroes gain a \svg{morale_negative} token.
-      Player 2 Hero is then placed in any Town or Settlement you control, or on a Field ajdacent to Gelu.
-    \item Your Heros do not gain Experience past Level 5.
+      Player 2 Hero is then placed in any Town or Settlement you control, or on a Field adjacent to Gelu.
+    \item Your Heroes do not gain Experience past Level 5.
     \item You cannot recruit a Secondary Hero.
     \item Enemy Heroes stay within their Towns. They do not move.
     \item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.
     \item Gain 1 \svg{valuables} when you defeat an Enemy Hero Army.
-    \item \textbf{The Obelisk at N3 and Obelisk at N5 are Two-Way Monoliths.}
-      Entering one of these fields transports your Hero to the other Field. \textbf{The Obelisks function only if both Necropolis and Inferno Faction Towns have been taken.}
-    \item \textbf{Inferno Town contains a one-way Castle Gate} that will allow the Player to transport themselves to the Obelisk at N3. It worksy only if the N3 Obelisk was flagged.
+    \item \textbf{The Obelisks at N3 and N5 are Two-Way Monoliths.}
+      Entering one of these fields transports your Hero to the other Field. \textbf{The Obelisks function only if both Necropolis and Inferno Faction Towns have been captured.}
+    \item \textbf{Inferno Town contains a one-way Castle Gate} that will allow the Player to transport themselves to the Obelisk at N3. It works only if the N3 Obelisk was flagged.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Special Combat\\Conditions}}
 
 \begin{itemize}
   \item \textbf{Pack of Medusas:} This Combat requires no additional \svgeven{movement}.
-    Medusas stay in this spot on the Far Map tile even if the Map tile is rotated after discovery.
-    If there is a Neutral army also on this Map tile, it must be battled separately after the Medusas defeated.
-  \item \textbf{Pandora’s Box:} If you enter a Field with a Pandora’s Box, start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
+    Medusas remain in this spot on the Far Map tile even if the Map tile is rotated after discovery.
+    If a Neutral army is also present on this Map tile, it must be battled separately after the Medusas are defeated.
+  \item \textbf{Pandora's Box:} If you enter a Field with a Pandora's Box, start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
     In addition to the Field reward, gain 1 \svg{valuables}.
-  \item \textbf{Necropolis and Inferno Towns:} The Necropolis and Inferno Towns (on S1 and S6) MUST be attacked and taken in the same Round.
-    The Round is determined by when either Map tile S1 or S6 are entered.
+  \item \textbf{Necropolis and Inferno Towns:} The Necropolis and Inferno Towns (on S1 and S6) MUST be attacked and captured in the same Round.
+    The Round is determined by when either Map tile S1 or S6 is entered.
     If this coordinated attack fails, Gelu will lose his cover, and all Enemy Towns will call for immediate reinforcements.
     Gelu is then defeated.
 \end{itemize}
