--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -83,9 +83,9 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \subsection*{\MakeUppercase{Heroes Placement}}
 
 Place Necropolis, Inferno, and Dungeon Heroes in their respective Faction Towns.
-Place Gelu on the center field of the Rampart S4 Starting Map tile.
+Place Gelu on the center Field of the Rampart S4 Starting Map Tile.
 Place either Mephala or Clancy on an empty Field of the F10 Map Tile.
-Place the Pack of Medusas on the Far Map tile as indicated in the Scenario map layout.
+Place the Pack of Medusas on the Far Map Tile as indicated in the Scenario map layout.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -123,7 +123,7 @@ You lose if any of the following occur:
     Several of your supply trains have been hit by raiders and their contents looted.
     Lose: 3~\svg{gold}, 1~\svg{building_materials}, 1~\svg{valuables}.
     Deal with this situation.
-  \item The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} until the end of the Scenario (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
+  \item The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} until the end of the Scenario (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).  % no-check-caps
 \end{itemize}
 
 \textbf{Entering the Field with Pandora's Box:}
@@ -135,19 +135,19 @@ You lose if any of the following occur:
 \textbf{\nth{9} Round:}
 \begin{itemize}
  \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-   Lose 10 \svg{gold} from this round's income.
+   Lose 10 \svg{gold} from this Round's income.
 \end{itemize}
 
 \textbf{\nth{11} Round:}
 \begin{itemize}
   \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-    Lose 20 \svg{gold} from this round's income.
+    Lose 20 \svg{gold} from this Round's income.
 \end{itemize}
 
 \textbf{\nth{13} Round:}
 \begin{itemize}
   \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-    Lose 30 \svg{gold} from this round's income.
+    Lose 30 \svg{gold} from this Round's income.
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
@@ -171,7 +171,7 @@ During this Scenario:
     \item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.
     \item Gain 1 \svg{valuables} when you defeat an Enemy Hero Army.
     \item \textbf{The Obelisks at N3 and N5 are Two-Way Monoliths.}
-      Entering one of these fields transports your Hero to the other Field. \textbf{The Obelisks function only if both Necropolis and Inferno Faction Towns have been captured.}
+      Entering one of these Fields transports your Hero to the other Field. \textbf{The Obelisks function only if both Necropolis and Inferno Faction Towns have been captured.}
     \item \textbf{Inferno Town contains a one-way Castle Gate} that will allow the Player to transport themselves to the Obelisk at N3. It works only if the N3 Obelisk was flagged.
 \end{itemize}
 
@@ -179,12 +179,12 @@ During this Scenario:
 
 \begin{itemize}
   \item \textbf{Pack of Medusas:} This Combat requires no additional \svgeven{movement}.
-    Medusas remain in this spot on the Far Map tile even if the Map tile is rotated after discovery.
-    If a Neutral army is also present on this Map tile, it must be battled separately after the Medusas are defeated.
+    Medusas remain in this spot on the Far Map Tile even if the Map Tile is rotated after discovery.
+    If a Neutral army is also present on this Map Tile, it must be battled separately after the Medusas are defeated.
   \item \textbf{Pandora's Box:} If you enter a Field with a Pandora's Box, start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
     In addition to the Field reward, gain 1 \svg{valuables}.
   \item \textbf{Necropolis and Inferno Towns:} The Necropolis and Inferno Towns (on S1 and S6) MUST be attacked and captured in the same Round.
-    The Round is determined by when either Map tile S1 or S6 is entered.
+    The Round is determined by when either Map Tile S1 or S6 is entered.
     If this coordinated attack fails, Gelu will lose his cover, and all Enemy Towns will call for immediate reinforcements.
     Gelu is then defeated.
 \end{itemize}
@@ -217,7 +217,7 @@ During this Scenario:
     \begin{tabularx}{0.95\linewidth}{>{\centering}p{0.15\linewidth}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
       \darkcell{Faction} & \darkcell{Units} & \darkcell{AI Deck} & \darkcell{Spells} \\
       \darkcell[2.8]{Necropolis}
-      & \lightcell[2.8]{Pack of Zobmies\\Pack of Wraiths\\Pack of Liches\\Few Dread Knights\\Walls and Gate}
+      & \lightcell[2.8]{Pack of Zombies\\Pack of Wraiths\\Pack of Liches\\Few Dread Knights\\Walls and Gate}
       & \lightcell[2.8]{1~×~Might \svg{might-yellow} Card\\3~×~Magic \svg{magic-yellow} Card}
       & \lightcell[2.8]{1~×~Resurrection\\1~×~Haste\\1~×~Weakness} \\
       \darkcell[2.8]{Inferno}
