Add first draft of second scenario

--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -48,7 +48,7 @@ This Scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Coop Play Rules}}
 
-In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), players must reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} specific to this campaign.
+In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} specific to this campaign.
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
@@ -208,7 +208,7 @@ During this Scenario:
   \node at (11.9, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S6}}}}};
 \end{tikzpicture}
 
-\begin{table*}[b!]
+\begin{table*}[!b]
   \hommtable[]{24}{
     \centering
     \medskip
