--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -293,4 +293,8 @@ If you haven't secured all mines in all the grass Tiles, bandits have attacked y
 
 \textcolor{darkcandyapplered}{Lose:} 5 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}.
 
+\vspace*{\fill}
+
+\includegraphics[width=\linewidth, keepaspectratio]{\art/dwarf.jpg}
+
 \end{multicols*}
