Grammar, clarity, cap fixes

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -30,7 +30,7 @@ This Scenario plays out over 16 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
 
-\textbf{Bonus:} one player recives one of the following:
+\textbf{Bonus:} One player receives one of the following:
 \begin{itemize}
   \item Add Neutral \svgunit{bronze} Rogues to your Units.
   \item 6 \svg{gold}
@@ -47,12 +47,12 @@ In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in 
 
 \textbf{Faction:} Necropolis
 
-Before beginning this scenario, find all Necropolis Neutral Unit Cards in all Neutral Unit Decks, and set them aside.
+Before beginning this Scenario, find all Necropolis Neutral Unit Cards in all Neutral Unit Decks, and set them aside.
 These will only be used by \textbf{Necropolis Charging Armies}.
 
-Charging Armies move after the Players do, and take the shortest route to the Player that has Crest of Valor or the Angel Wings.
+Charging Armies move after the Players do, and take the shortest route to the Player that has the Crest of Valor or the Angel Wings.
 
-They ignore everything else, except they will take mines only if flagged by Rampart player (but they will not backtrack to flag a mine).
+They ignore everything else, except they will take mines only if flagged by the Rampart player (but they will not backtrack to flag a mine).
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -77,12 +77,12 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Heroes Placement}}
 
-Place both Gelu and Meplaha/Clancy on the center Field of the Rampart S4 Starting Map Tile.
+Place both Gelu and Mephala/Clancy on the center Field of the Rampart S4 Starting Map Tile.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
 Obtain the Ring of Vitality.
-Seek out Feredor the Seer (\#F4), who will guide you how to obtain the Ring of Vitality from the Man in the Southwest (F12).
+Seek out Feredor the Seer (\#F4), who will guide you on how to obtain the Ring of Vitality from the Man in the Southwest (F12).
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -97,7 +97,7 @@ You lose if any of the following occur:
 \textbf{\nth{1} Round:}
 \begin{itemize}
   \item Read ``Local Warlords'' section.
-  \end{itemize}
+\end{itemize}
 
 \textbf{\nth{2} Round:}
 \begin{itemize}
@@ -126,7 +126,7 @@ You lose if any of the following occur:
 
 \textbf{If you obtain the Crest of Valor or enter N2 or N5 Tile:}
 \begin{itemize}
-  \item Place Necropolis Heroes on Necropolis Twon (S1) and Necropolis Settlement (F1).
+  \item Place Necropolis Heroes on Necropolis Town (S1) and Necropolis Settlement (F1).
 \end{itemize}
 
 \textbf{\nth{7} Round:}
@@ -136,12 +136,12 @@ You lose if any of the following occur:
 
 \textbf{If entering the Witch Hut on \#F4 for the second time:}
 \begin{itemize}
-\item Read ``Feredor the Seer -- second encounter'' section.
+  \item Read ``Feredor the Seer -- second encounter'' section.
 \end{itemize}
 
 \textbf{If entering the Witch Hut on F12:}
 \begin{itemize}
-\item Read ``The Man in the Southwest'' section.
+  \item Read ``The Man in the Southwest'' section.
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
@@ -149,73 +149,58 @@ You lose if any of the following occur:
   \item Read: ``Congratulations! You have passed the Trial! Victory is yours!''
 \end{itemize}
 
-
 \subsection*{\MakeUppercase{Additional Rules}}
 
 During this Scenario:
 
 \begin{itemize}
-    \item Gelu cannot surrender.
-      Player 2 can surrender.
-      If player 2 is defeated in Combat, lose 5 \svg{gold} and both Heroes gain a \svg{morale_negative} token.
-      Player 2 Hero is then placed in any Town or Settlement you control, or on a Field adjacent to Gelu.
-    \item You cannot recruit a Secondary Hero.
-    \item Gain 2 \svg{gold} every time you defeat an Enemy Army.
-    \item Players can trade from their hand the Crest of Valor and Angel Wings, if they are on adjacent fields on the map.
+  \item Gelu cannot surrender.
+    Player 2 can surrender.
+    If player 2 is defeated in Combat, lose 5 \svg{gold} and both Heroes gain a \svg{morale_negative} token.
+    Player 2 Hero is then placed in any Town or Settlement you control, or on a Field adjacent to Gelu.
+  \item You cannot recruit a Secondary Hero.
+  \item Gain 2 \svg{gold} every time you defeat an Enemy Army.
+  \item Players can trade the Crest of Valor and Angel Wings from their hand if they are on adjacent Fields on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Combat with Necropolis Charging Armies}}
 
-
-Every time a Combat encounter starts, draw a Neutral army from the Necropolis Units set aside, with a difficulty level equal to your Hero Level.
-
+Every time a Combat encounter starts, draw a Neutral army from the Necropolis Units set aside, with a difficulty level equal to your Hero Level.  % no-check-caps
 
 Every time a Necropolis Charging Army is defeated, they re-appear on the Necropolis Town (S1).
 If the Town is occupied, they re-appear on the Necropolis Settlement (F1).
 They can move again in the next Resource Round.
 
-% \begin{itemize}
-%   \item \textbf{Necropolis Armies:} At the moment in which either The Crest of Valor is obtained by Player 1 or 2, or if either Player enters Near Map tile N2 or N5, both Charging Heroes will appear on the map on S1 and F1.
-%     Charging Heroes move after the Players do, and take shortest route to the Player that has Crest of Valor or the Angel Wings.
-%     They ignore everything else, except they will take mines only if flagged by Rampart Player (but they will not backtrack to flag a mine).
-%   \item Every time a Necropolis Charging Army is defeated, they re-appear on the Necropolis Town (S1).
-%     If the Town is occupied, they re-appear on the Necropolis Settlement (F1).
-%     They can move again on the next upcoming Resource Round.
-% \end{itemize}
-
-% \includegraphics[width=\linewidth]{\art/dendroid.jpg}
-
 \end{multicols*}
 
-\begin{tikzpicture}[remember picture, overlay]
-  \node(map)[anchor=center] at (9, -5.5) {
-    \includegraphics[width=\textwidth]{\maps/rampart_cutthroats.png}
-  };
-  \node at (3.9,0.6) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
-  \node at (11.9, -11.6) {\large{{\textbf{\textcolor{darkcandyapplered}{S1}}}}};
-  \node at (14.9, -6.6) {\large{{\textbf{\textcolor{darkcandyapplered}{F1}}}}};
-  \node at (13.5, 0.6) {\large{{\textbf{\textcolor{darkcandyapplered}{\#F4}}}}};
-  \node at (3.7,-4.3) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
-  \node(f12) at (0.1, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{F12}}}}};
-  \node at (11.3, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N2}}}}};
-  \node at (4.5,-10.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
+\begin{minipage}{\textwidth}
+  \vspace{-1em}
+  \begin{tikzpicture}[remember picture]
+    \node(map)[anchor=center] at (9, -5.5) {
+      \includegraphics[width=\textwidth]{\maps/rampart_cutthroats.png}
+    };
+    \node at (3.9,0.6) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
+    \node at (11.9, -11.6) {\large{{\textbf{\textcolor{darkcandyapplered}{S1}}}}};
+    \node at (14.9, -6.6) {\large{{\textbf{\textcolor{darkcandyapplered}{F1}}}}};
+    \node at (13.5, 0.6) {\large{{\textbf{\textcolor{darkcandyapplered}{\#F4}}}}};
+    \node at (3.7,-4.3) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
+    \node(f12) at (0.1, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{F12}}}}};
+    \node at (11.3, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N2}}}}};
+    \node at (4.5,-10.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
 
-  \node(southwest) at (1.2, -9.3) {\large{{\textbf{\textcolor{darkcandyapplered}{Man in the}}}}};
-  \node at (1.2, -9.8) {\large{{\textbf{\textcolor{darkcandyapplered}{Southwest}}}}};
+    \node(southwest) at (1.2, -9.3) {\large{{\textbf{\textcolor{darkcandyapplered}{Man in the}}}}};
+    \node at (1.2, -9.8) {\large{{\textbf{\textcolor{darkcandyapplered}{Southwest}}}}};
 
-  \node(feredor) at (16.9, -3.1) {\large{{\textbf{\textcolor{darkcandyapplered}{Feredor}}}}};
-  \node at (16.9, -3.6) {\large{{\textbf{\textcolor{darkcandyapplered}{the Seer}}}}};
+    \node(feredor) at (16.9, -3.1) {\large{{\textbf{\textcolor{darkcandyapplered}{Feredor}}}}};
+    \node at (16.9, -3.6) {\large{{\textbf{\textcolor{darkcandyapplered}{the Seer}}}}};
 
-    % Arrow from "Man in the Southwest" to just below F12
-  \draw[->, line width=1.5pt, darkcandyapplered] ($(southwest) + (-0.2, 0.2)$) to[out=125, in=225] ($(f12) + (0, -1.5)$);
+    \draw[-Triangle, line width=2.5pt, darkcandyapplered] ($(southwest) + (-0.2, 0.2)$) to[out=135, in=270] ($(f12) + (0.2, -2.0)$);
+    \draw[-Triangle, line width=2.5pt, darkcandyapplered] ($(feredor) + (0.5, 0.3)$) to[out=70, in=270] ($(feredor) + (0.7, 1.7)$);
+  \end{tikzpicture}
+\end{minipage}
 
-  % Arrow from "Feredor the Seer" to a point slightly above the text
-  \draw[->, line width=1.5pt, darkcandyapplered] ($(feredor) + (0.5, 0.3)$) to[out=90, in=330] ($(feredor) + (0.9, 2.1)$);
-\end{tikzpicture}
-
-
-\vspace{32em}
 \begin{multicols*}{2}
+
 \subsection*{\MakeUppercase{The Story}}
 
 \textbf{Local Warlords}
@@ -249,7 +234,7 @@ Perform whatever task he asks, for you must obtain that Ring.
 
 \textbf{Feredor the Seer -- first encounter}
 
-Feredor the seer sees the Rampart hero approach and knows he must help them against the hordes of undead.
+  Feredor the seer sees the Rampart hero approach and knows he must help them against the hordes of undead.  % no-check-caps
 ``I can tell you where the Ring can be found.
 But you must prove your worthiness.
 Bring back the Crest of Valor to me. Now hurry!''
@@ -280,12 +265,11 @@ Move with haste, there is little time.''
 
 \textbf{The Man in the Southwest}
 
-If you do not have the Angel Wings (in your hand or deck) and enter this field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''
+If you do not have the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''
 
-If you are in possession of the Angel Wings (in your hand or deck) and enter this field, the Man in the Southwest stays: ``Ahhhhh, I see Feredor sent you.
+If you are in possession of the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``Ahhhhh, I see Feredor sent you.
 You are worthy.
 Here, I give you the Ring of Vitality!''
-
 
 \textbf{Bandits}
 
@@ -294,7 +278,6 @@ If you haven't secured all mines in all the grass Tiles, bandits have attacked y
 \textcolor{darkcandyapplered}{Lose:} 5 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}.
 
 \vspace*{\fill}
-
 \includegraphics[width=\linewidth, keepaspectratio]{\art/dwarf.jpg}
 
 \end{multicols*}
