--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -88,7 +88,7 @@
 
 \captionsetup[figure]{labelformat=empty}
 \captionsetup[subfigure]{labelformat=empty, singlelinecheck=off, justification=centering}
-\usetikzlibrary{shadows, shadows.blur, calc, backgrounds}
+\usetikzlibrary{shadows, shadows.blur, calc, backgrounds, arrows.meta}
 
 \setlength{\columnsep}{1cm}
 \newtoggle{printable}
