Add coop campaign rules

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -129,6 +129,7 @@ You lose if any of the following occur:
   \item Place Necropolis Heroes on Necropolis Town (S1) and Necropolis Settlement (F1).
 \end{itemize}
 
+\columnbreak
 \textbf{\nth{7} Round:}
 \begin{itemize}
   \item Read ``Terrible Dreams'' section.
