--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -501,6 +501,8 @@
 
 \include{campaigns/main.tex}
 
+\include{sections/coop_campaign_rules.tex}
+
 % \include{sections/back_cover.tex}
 
 \end{document}
