--- a/draft-scenarios/sections/coop_campaign_rules.tex
+++ b/draft-scenarios/sections/coop_campaign_rules.tex
@@ -7,23 +7,24 @@ In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in 
 
 \begin{itemize}
   \item Both players utilize the same Rampart Town Board.
-    The Town Board and Actions both function as normal unless otherwise stated below, but both players must work together to determine the Town Actions to take and when.
-  \item When the Population Token is used, both players can Recruit and Reinforce units.
+    The Town Board and Actions function as normal unless otherwise stated below, but both players must work together to determine which Town Actions to take and when.
+  \item When the Population Token {\includegraphics[height=1.2\baselineskip, valign=c]{\images/population_token.png}} is used, \textbf{both players can Recruit and Reinforce} Units.
   \item Only one player can utilize a Town building's effects when they are used each Round (Mage Guild, Saplings, Spell Book Token, etc.).
   \item All resources gathered (\svg{gold}, \svg{building_materials}, \svg{valuables}) are shared between both players.
     Both players must decide how these resources are spent.
   \item Players always \textbf{decide what Units each player will have for each Round.
     This happens at the very beginning of each Round}, immediately after the Round Tracker advances.
-    Each player must take \textbf{half} of all recruited units (including Neutral ones).
-    If there is an odd number of total units owned, one player will take one Unit more.
-  \item Players can \textbf{swap units and War Machines if their Heroes are adjacent to each other} on the map.
-    If a Unit swap occurs, players must still maintain having half of all owned units (with one player having one more if an odd number are owned).
-  \item Whenever players Recruit units using the Population Token, players decide whom the unit will go to for this Round.
-    This is the only time the ``Half'' rule does not need to be followed.
+    Each player must take \textbf{half} of all recruited Units (including Neutral ones).
+    If there is an odd number of total Units recruited, one player will take one Unit more.
+  \item Players can \textbf{swap Units and War Machines if their Heroes are adjacent to each other} on the map.
+    If a Unit swap occurs, players must still maintain having half of all recruited Units (with one player having one more if an odd number are recruited).
+  \columnbreak
+  \item Whenever players \textbf{Recruit} Units using the Population Token {\includegraphics[height=1.2\baselineskip, valign=c]{\images/population_token.png}}, players decide which player the Unit will go to for this Round.
+    This is the only time the ``half'' rule does not need to be followed.
     Use this to your advantage!
-  \item Players cannot trade Cards from their Deck or hand.
+  \item Players \textbf{cannot trade Cards} from their Deck or hand.
     Each player's M\&M Deck is solely their own throughout the Campaign.
-  \item Optonal rule: players can trade one Artifact Card from hand in exchange for an Artifact Card from the other player's hand, if player Heroes are adjacent to each other on the map.
+  \item \textbf{Optional rule}: players can trade one Artifact Card from hand in exchange for an Artifact Card from the other player's hand, if player Heroes are adjacent to each other on the map.
 \end{itemize}
 
 \vspace*{\fill}
