In bash we trust

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -41,7 +41,7 @@ Find the \textbf{Crest of Valor} and \textbf{Angel Wings} Artifacts, and set the
 
 \subsection*{\MakeUppercase{Coop Play Rules}}
 
-In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} specific to this campaign.
+In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagelink{Coop Campaign Rules}{Coop Campaign Rules} specific to this campaign.
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
