--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -48,13 +48,13 @@ This Scenario plays out over 13 Rounds.
 
 \subsection*{\MakeUppercase{Coop Play Rules}}
 
-In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagetarget{Cooperative Play Rules}{Cooperative Play Rules} specific to this campaign.
+In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), reference the attached \pagelink{Coop Campaign Rules}{Coop Campaign Rules} specific to this campaign.
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} Necropolis, Inferno, Dungeon
 
-Refer to the table below the map layout for detailed information about Units and AI Decks.
+Refer to the \hyperlink{Elixir of Life AI}{table below the map layout} for detailed information about Units and AI Decks.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -209,6 +209,7 @@ During this Scenario:
 \end{tikzpicture}
 
 \begin{table*}[!b]
+  \hypertarget{Elixir of Life AI}{}
   \hommtable[]{24}{
     \centering
     \medskip
