--- a/draft-scenarios/sections/coop_campaign_rules.tex
+++ b/draft-scenarios/sections/coop_campaign_rules.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-In addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), these rules apply to the Rampart's Elixir of Life Campaign.
+\pagetarget{Coop Campaign Rules}{In} addition to the Cooperative Mode rules (see page 11, ``Cooperative Mode'' in the Core Mission Book), these rules apply to the Rampart's Elixir of Life Campaign.
 
 \begin{itemize}
   \item Both players utilize the same Rampart Town Board.
